Fix error on heading letter spacing; add comments in main.scss

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -58,8 +58,10 @@ article {
 
 h1, h2, h3, h4, h5, h6 {
   max-width: 16em;
-  margin: 0 auto 0 auto;
+  height: auto;
+  margin: 0 auto;
   line-height: 1.5;
+  letter-spacing: normal;
   text-align: center;
 }
 
@@ -181,26 +183,22 @@ footer {
   margin-bottom: 8em;
 }
 
-.post-page {
-  article {                      // `.post-page` selects `body` in '/_layouts/default.html'
+.post-page {                              // `.post-page` selects `body` in '/_layouts/default.html'
+  article {
     padding-left: 0;
     text-align: justify;
   }
 }
 
 .en-page {                                  // `.en-page` selects `body` in '/_layouts/default.html'
-  h1, h2, h3, h4, h5, h6,
   article {
     letter-spacing: normal;
+    word-spacing: .08em;
+    text-align: center;
   }
 
   h1, h2, h3, h4, h5, h6 {
     word-spacing: .2em;
-  }
-
-  article {
-    word-spacing: .08em;
-    text-align: center;
   }
 }
 
@@ -212,7 +210,7 @@ footer {
     --color_paper:       hsl(46, 2%, 33%);
     --color_text:        hsl(46, 10%, 90%);
     --color_text_footer: hsl(46, 1%, 50%);
-    --color_accent:      hsl(55, 100%, 85%);
+    --color_accent:      hsl(55, 100%, 80%);
   }
 }
 
